# Dumbulator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.f7711f1  CTestTestfile.cmake  PszhCalculator.cbp  README.md  cmake_install.cmake  data
src/: CMakeLists.txt  Pshculator  Pshculator.cbp  Pshculator_ru_RU.ts  calculatormenu.ui  cmake_install.cmake  main.cpp  mathoperations.cpp  mathoperations.h  pshculator.cpp  pshculator.h  pshculator.ui
src/Pshculator_autogen/: mocs_compilation.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  check  check.cbp  check.h  cmake_install.cmake  tst_check.cpp
tests/check_autogen/: moc_predefs.h
